--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <!-- HAIDER -->
     <header>
-      <a href="#">WebStudio</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="#">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
@@ -17,8 +17,10 @@
         </ul>
       </nav>
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
       </address>
     </header>
     <!-- MAIN -->
@@ -26,7 +28,7 @@
       <!-- Section-1 -->
       <section>
         <h1>Effective Solutions for Your Business</h1>
-        <button>Order Service</button>
+        <button type="button">Order Service</button>
       </section>
       <!-- Section-2 -->
       <section>
@@ -97,7 +99,7 @@
     </main>
     <!-- FOOTER -->
     <footer>
-      <a href="#">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
