--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       </section>
       <!-- Section-2 -->
       <section>
+        <h2>Hiden</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
